--- a/demo/index.html
+++ b/demo/index.html
@@ -37,7 +37,7 @@
         setupEyevinnPlayer('hls-wrapper', 
         'https://maitv-vod.lab.eyevinn.technology/VINN.mp4/master.m3u8').then(function(player) {
           console.log('HLS Player initiated');    
-          player.play(true);
+          player.play(false);
         }).catch(console.error);
         setupEyevinnPlayer('dash-wrapper', 
         'https://storage.googleapis.com/shaka-demo-assets/sintel-mp4-only/dash.mpd').then(function(player) {
