--- a/demo/index.html
+++ b/demo/index.html
@@ -31,6 +31,8 @@
     <div class="wrapper" id="hls-wrapper"></div>
     <h2>MPEG-DASH</h2>
     <div class="wrapper" id="dash-wrapper"></div>
+    <h2>MSS</h2>
+    <div class="wrapper" id="mss-wrapper"></div>
     <script src="../build/eyevinn-html-player.js" type="text/javascript"></script>
     <script>
       document.addEventListener('DOMContentLoaded', function(event) {
@@ -44,6 +46,11 @@
           console.log('Dash Player initiated: ' + player.version);    
           player.play(true);
         }).catch(console.error);
+        setupEyevinnPlayer('mss-wrapper', 
+        'http://playready.directtaps.net/smoothstreaming/SSWSS720H264/SuperSpeedway_720.ism/Manifest').then(function(player) {
+          console.log('MSS Player initiated: ' + player.version);    
+          player.play(true);
+        }).catch(console.error);        
       });
     </script>
   </body>
