Added isLive property to player interface

--- a/demo/index.html
+++ b/demo/index.html
@@ -39,17 +39,20 @@
         setupEyevinnPlayer('hls-wrapper', 
         'https://maitv-vod.lab.eyevinn.technology/VINN.mp4/master.m3u8').then(function(player) {
           console.log('HLS Player initiated: ' + player.version);
-          player.play(false);
+          //player.play(false);
+          console.log('HLS: isLive=' + player.isLive);
         }).catch(console.error);
         setupEyevinnPlayer('dash-wrapper', 
         'https://storage.googleapis.com/shaka-demo-assets/sintel-mp4-only/dash.mpd').then(function(player) {
           console.log('Dash Player initiated: ' + player.version);    
           player.play(true);
+          console.log('DASH: isLive=' + player.isLive);
         }).catch(console.error);
         setupEyevinnPlayer('mss-wrapper', 
         'http://playready.directtaps.net/smoothstreaming/SSWSS720H264/SuperSpeedway_720.ism/Manifest').then(function(player) {
           console.log('MSS Player initiated: ' + player.version);    
           player.play(true);
+          console.log('MSS: isLive=' + player.isLive);
         }).catch(console.error);        
       });
     </script>
