--- a/demo/index.html
+++ b/demo/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="../build/eyevinn-html-player.css" />
     <style>
       .wrapper {
-        width: 1024px;
-        height: 576px;
+        max-width: 1024px;
+        max-height: 576px;
         margin: 0 auto;
         background-color: black;
         margin-top: 5px;
