--- a/demo/index.html
+++ b/demo/index.html
@@ -3,27 +3,11 @@
   <head>
     <title>Eyevinn HTML Player</title>
     <meta name="description" content="HTML Player for HLS and MPEG-DASH"/>
-    <link rel="stylesheet" href="../build/eyevinn-html-player.css" />
-    <style>
-      .wrapper {
-        max-width: 1024px;
-        max-height: 576px;
-        margin: 0 auto;
-        background-color: black;
-        margin-top: 5px;
-        margin-bottom: 5px;
-      }
-      .demo h1 {
-        text-align: center;
-        font-family: Arial, Verdana;
-        font-size: 34pt;
-      }
-      .demo h2 {
-        text-align: center;
-        font-family: Arial, Verdana;
-        font-size: 24pt;        
-      }
-    </style>
+    <link rel="stylesheet" href="../styles/main.scss" />
+    <script src="../index.js" type="text/javascript"></script>
+
+    <link rel="stylesheet" href="demo.css" />
+    <script src="demo.js" type="text/javascript"></script>
   </head>
   <body class="demo">
     <h1>Eyevinn HTML Player Demo</h1>
@@ -33,28 +17,5 @@
     <div class="wrapper" id="dash-wrapper"></div>
     <h2>MSS</h2>
     <div class="wrapper" id="mss-wrapper"></div>
-    <script src="../build/eyevinn-html-player.js" type="text/javascript"></script>
-    <script>
-      document.addEventListener('DOMContentLoaded', function(event) {
-        setupEyevinnPlayer('hls-wrapper', 
-        'https://maitv-vod.lab.eyevinn.technology/VINN.mp4/master.m3u8').then(function(player) {
-          console.log('HLS Player initiated: ' + player.version);
-          player.play(false);
-          console.log('HLS: isLive=' + player.isLive);
-        }).catch(console.error);
-        setupEyevinnPlayer('dash-wrapper', 
-        'https://storage.googleapis.com/shaka-demo-assets/sintel-mp4-only/dash.mpd').then(function(player) {
-          console.log('Dash Player initiated: ' + player.version);    
-          player.play(true);
-          console.log('DASH: isLive=' + player.isLive);
-        }).catch(console.error);
-        setupEyevinnPlayer('mss-wrapper', 
-        'http://playready.directtaps.net/smoothstreaming/SSWSS720H264/SuperSpeedway_720.ism/Manifest').then(function(player) {
-          console.log('MSS Player initiated: ' + player.version);    
-          player.play(true);
-          console.log('MSS: isLive=' + player.isLive);
-        }).catch(console.error);        
-      });
-    </script>
   </body>
 </html>
